--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <script src="classes/block.js"></script>
+    <script src="classes/ghost.js"></script>
     <script src="sketch.js"></script>
 </body>
 
