--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <script src="classes/block.js"></script>
     <script src="classes/ghost.js"></script>
+    <script src="classes/bat.js"></script>
     <script src="sketch.js"></script>
 </body>
 
