--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="classes/block.js"></script>
     <script src="classes/ghost.js"></script>
     <script src="classes/bat.js"></script>
+    <script src="classes/bullet.js"></script>
     <script src="sketch.js"></script>
 </body>
 
