added collide.js to inde.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="classes/ghost.js"></script>
     <script src="classes/bat.js"></script>
     <script src="classes/bullet.js"></script>
+    <script src="classes/collide.js"></script>
     <script src="sketch.js"></script>
 </body>
 
