--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./libs/p5.dom.min.js"></script>
     <script src="./libs/p5.gif.min.js"></script>
     <script src="./libs/p5.play.js"></script>
+    <script src="./libs/p5.touch.js"></script>
     <script src="./libs/p5.sound.min.js"></script>
 </head>
 
